<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_weather_content_disc">Current Weather icon</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_text">Weather Forecast</string>
    <string name="preference_setting_key">setting</string>
    <string name="preference_first_time">is_first_time</string>
    <string name="pref_user_lat">lat</string>
    <string name="location_permission_denied"><![CDATA[This Application requires location permission to fetch your location temperature. Please try again and grant access to use the location.\nIf the permission has been permanently denied</string>]]></string>
    <string name="permission_required_toast">Location permission is required for this Application</string>
    <string name="permission_rationale_location">Access to the location service is required find your weather data.</string>
    <string name="pref_user_longitude" tools:ignore="ExtraTranslation">log</string>
    <string name="title_home">Home</string>
    <string name="title_alert">Alerts</string>
    <string name="title_setting">Setting</string>
    <string name="title_favourite">Favouties</string>
    <string name="add_city">Add Favourite Location</string>
    <string name="delete_city">Delete</string>
    <string name="hint_city">Cairo....</string>
    <string name="button_save">Add</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="location_title">Location</string>
    <string name="unite_title">unit</string>
    <string name="temp_unit">Temperature unite and Wind speed</string>
    <string name="language">Language</string>
    <string name="languages">language</string>
    <string name="pref_last_update">weather_last_update</string>
    <string name="no_internet">Sorry there is no internet connection</string>
    <string name="canecl">Cancel</string>
    <string name="favourite_city_key">favouriteCityKey</string>
    <string name="humidity_label">Humidity</string>
    <string name="precent_symbol">%</string>
    <string name="wind_label">Wind</string>
    <string name="pressure_label">Pressure</string>
    <string name="clouds_label">Clouds</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="event">Event</string>
    <string name="cancelAlarm">cancel alert</string>
    <string name="TitleDeleteAlarm">Do you want cancel this alarm ?</string>
    <string name="notification">Notification</string>
    <string name="sound">Sound Alarm</string>
    <string name="from_time_content">from time picker</string>
    <string name="to_date_content">to Date picker</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
</resources>