<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/unite_title">
        <ListPreference
            app:defaultValue="temp_c"
            app:entries="@array/Temp_unit"
            app:entryValues="@array/Temp_unit_values"
            app:key="Temp"
            app:title="@string/temp_unit"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/language">
        <ListPreference
            app:defaultValue="English"
            app:entries="@array/language"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/languages"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>